5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1834_1278.log
== TEST (2019-06-27 16:11:37) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 09:00:16) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

for i 



-- ERROR:
File "XXXX", line 13
    for i 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 09:01:03) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distancia = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distancia)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 09:01:33) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distancia = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distancia)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 09:02:17) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distancia = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distancia)	
-- EXECUTION TIME:
0.855443
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
50
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
